grouping management page mostly done, in the middle of adding routing protections
